force-app/main/default/objects/Topic_Junction__c/Topic_Junction__c.object-meta.xml
<CustomObject>
    <description>Junction Object for customizable tagging mechanism in Salesforce. Enables users to associate Topics with object records to track a particular issue, theme, or subject across objects. Also gives Administrators ability to manage and customize Topics directly.</description>
    <label>Topic Junction</label>
    <nameField>
        <displayFormat>TJ-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Topic Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>