force-app/main/default/objects/Topic_Junction__c/fields/Object_Field__c.field-meta.xml
<CustomField>
    <fullName>Object_Field__c</fullName>
    <label>Object Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>