force-app/main/default/objects/Topic_Junction__c/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <formula>MID(Topic_Junction_Id__c, FIND(&apos;-&apos;, Topic_Junction_Id__c)+1, FIND(&apos;-&apos;,Topic_Junction_Id__c, FIND(&apos;-&apos;,Topic_Junction_Id__c)+1) - FIND(&apos;-&apos;,Topic_Junction_Id__c)-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Object Type</label>
    <type>Text</type>
</CustomField>