force-app/main/default/objects/Topic_Junction__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <referenceTo>Topic__c</referenceTo>
    <relationshipLabel>Records with Topic</relationshipLabel>
    <relationshipName>Topic_Junctions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>