force-app/main/default/objects/Topic_Junction__c/fields/Topic_Junction_Id__c.field-meta.xml
<CustomField>
    <fullName>Topic_Junction_Id__c</fullName>
    <externalId>true</externalId>
    <label>Topic Junction Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>