force-app/main/default/objects/Topic_Junction__c/fields/Topic_Junction_Name__c.field-meta.xml
<CustomField>
    <fullName>Topic_Junction_Name__c</fullName>
    <label>Topic Junction Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>